[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/PickableList.gd" type="Script" id=1]
[ext_resource path="res://UI/SearchLine.tscn" type="PackedScene" id=2]

[node name="ListWithSearch" type="HBoxContainer"]
margin_right = 275.0
margin_bottom = 164.0
script = ExtResource( 1 )

[node name="All" type="VBoxContainer" parent="."]
margin_right = 150.0
margin_bottom = 164.0
custom_constants/separation = 8

[node name="Search" parent="All" instance=ExtResource( 2 )]
margin_right = 150.0
margin_bottom = 25.0

[node name="HSeparator" type="HSeparator" parent="All"]
margin_top = 33.0
margin_right = 150.0
margin_bottom = 37.0

[node name="Scroll" type="ScrollContainer" parent="All"]
margin_top = 45.0
margin_right = 150.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Items" type="ItemList" parent="All/Scroll"]
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true

[node name="HSeparator2" type="HSeparator" parent="All"]
margin_top = 73.0
margin_right = 150.0
margin_bottom = 77.0

[node name="AddBt" type="Button" parent="All"]
margin_top = 85.0
margin_right = 150.0
margin_bottom = 106.0
text = "Add ..."

[node name="RenameBt" type="Button" parent="All"]
margin_top = 114.0
margin_right = 150.0
margin_bottom = 135.0
text = "Rename ..."

[node name="DeleteBt" type="Button" parent="All"]
margin_top = 143.0
margin_right = 150.0
margin_bottom = 164.0
text = "Delete ..."

[connection signal="search_entered" from="All/Search" to="." method="_on_Search_search_entered"]
[connection signal="item_selected" from="All/Scroll/Items" to="." method="_on_Items_item_selected"]
[connection signal="pressed" from="All/AddBt" to="." method="_on_AddBt_pressed"]
[connection signal="ready" from="All/AddBt" to="." method="_on_AddBt_ready"]
[connection signal="pressed" from="All/RenameBt" to="." method="_on_RenameBt_pressed"]
[connection signal="ready" from="All/RenameBt" to="." method="_on_RenameBt_ready"]
[connection signal="pressed" from="All/DeleteBt" to="." method="_on_DeleteBt_pressed"]
[connection signal="ready" from="All/DeleteBt" to="." method="_on_DeleteBt_ready"]
